# proact

./: LICENSE  README.md
proact_ros/: .gitignore
proact_ros/box_blocks_experiment/: CMakeLists.txt  package.xml  setup.py
proact_ros/box_blocks_experiment/config/: participant5_trial1.yaml  participant5_trial2.yaml  participant6_trial2.yaml  participant7_trial2.yaml  trial1.yaml  trial11.yaml  trial18.yaml  trial20.yaml  trial21.yaml  trial22.yaml  trial23.yaml  trial6.yaml
proact_ros/box_blocks_experiment/launch/: arm_pose_manager.launch  blocks_spawn.launch  demo_control.launch  demo_setup.launch  grasp_setup_all_modes.launch  logging.launch  modeA_joint_jog.launch  modeB_ee_jog.launch  modeC_gaze.launch  table_spawn.launch
proact_ros/box_blocks_experiment/models/: bbt_box.sdf  bbt_box.urdf  blue_block.urdf  red_block.urdf
proact_ros/box_blocks_experiment/src/: blocks_spawn.sh  generate_config.py  generate_config_long.py  grasp_repub.py  master.sh  switch_controllers.sh
proact_ros/direct_control/: CMakeLists.txt  package.xml
proact_ros/direct_control/launch/: joy_servo.launch
proact_ros/direct_control/src/: emg2joint.cpp  emg2servo.cpp
proact_ros/gaze/: CMakeLists.txt  package.xml
proact_ros/gaze/src/: interpret_gaze_color.cpp  interpret_gaze_logger.cpp
proact_ros/mpl_control/: CMakeLists.txt  package.xml  setup.py
proact_ros/mpl_control/action/: grasp.action
proact_ros/mpl_control/config/: PID_gains.yaml  moveit_mpl.rviz  mpl_controllers_config.yaml
proact_ros/mpl_control/launch/: gazebo_setup.launch  mpl_sim.launch
proact_ros/mpl_control/src/: grasp_client.cpp  grasp_server.cpp  pick_place.cpp  pick_place.py
proact_ros/mpl_description/: CMakeLists.txt  README.md  model.sdf  mpl_right_arm.urdf  mpl_right_arm_27DoF.urdf  mpl_right_arm_27DoF_no_virtual_joint.urdf  mpl_right_arm_27DoF_old.urdf  mpl_right_arm_by_moveit.urdf  mpl_right_arm_by_moveit_effort_controllers.urdf  package.xml
proact_ros/mpl_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
proact_ros/mpl_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mpl_right_arm.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
proact_ros/mpl_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
proact_ros/shoulder_localization/: CMakeLists.txt  package.xml  setup.py
proact_ros/shoulder_localization/launch/: find_head_mocap_tf.launch  holoworld_with_mocap.launch  mocap_comm.launch  ros_comms.launch
proact_ros/shoulder_localization/src/: adjust_height_client.py  adjust_height_node.py  adjust_height_server.py  calibration.sh  fix_world_client.py  fix_world_server.py  holoworld_with_mocap.py
proact_ros/shoulder_localization/srv/: adjustHeight.srv  fixWorld.srv
proact_ros/topic_utils/: CMakeLists.txt  package.xml  setup.py
proact_ros/topic_utils/src/: gazebo2tf.py  pose2gazebo.py  pose_filter.py  posemsg2tf.py  tf2gazebo.py  tf2posemsg.py  wrap_joint_angles.py
proact_unity/Assets/: ArmMaterial.mat  BlockHighlighter.cs  BlueMaterial.mat  BrownMaterial.mat  CapturingPublisher.cs  CompletelyTransparentMaterial.mat  DarkMaterial.mat  FreezeDisplayer.cs  GazeDirectionPublisher.cs  GazeHitLocationPublisher.cs  GazePositionPublisher.cs  GazeTargetPublisher.cs  GhostMaterial.mat  GraspStatusDisplayer.cs  GreenGlowMaterial.mat  GreenMaterial.mat  HandMaterial.mat  HighlighterMaterial.mat  LightBlueMaterial.mat  LightGreenMaterial.mat  LightRedMaterial.mat  Logger.cs  LoggerCopy.cs  ModeDisplayer.cs  PlanSuccessDisplayer.cs  RTPublisher.cs  RedGlowMaterial.mat  RedMaterial.mat  TargetColor.mat  TransparentYellow.mat  Tree.prefab  UncorrectedPoseStampedPublisher.cs  WSATestCertificate.pfx  WorkspaceHighlighter.cs  WorkspaceHighlighter2.cs  hideFrames.cs  latencyMeasurementSubscriber.cs  modeDisplayerOld.cs  poseStampedSubscriberConstPos.cs  toggleResponder.cs
proact_unity/Assets/Materials/: CameraFrame.mat  New Render Texture.mat  SentFrame.mat  arrowimage.mat
proact_unity/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealityCameraProfile.asset  New MixedRealityInputSystemProfile.asset  New MixedRealityPointerProfile.asset  New MixedRealitySpatialAwarenessSystemProfile.asset  New MixedRealityToolkitConfigurationProfile 1.asset  New MixedRealityToolkitConfigurationProfile.asset
proact_unity/Assets/RosSharp/Scripts/RosBridgeClient/RosCommuncation/: ImagePublisherFromRT.cs  ImagePublisherFromTex2D.cs  PoseStampedSubscriber.cs
proact_unity/Assets/Urdf/CafeTable/: robot_description.urdf
proact_unity/Assets/Urdf/CheckersBoard/: robot_description.urdf
proact_unity/Assets/Urdf/default/: robot_description.urdf  table_description.urdf
proact_unity/Assets/Urdf/default/mpl_description/meshes/: elbow.prefab  elbow.stl  forearm.prefab  forearm.stl  humerus.prefab  humerus.stl  index0.prefab  index1.prefab  index2.prefab  index2.stl  index2_0.asset  index3.prefab  index3.stl  middle0.prefab  middle1.prefab  middle1.stl  middle1_0.asset  middle2.prefab  middle2_0.asset  middle3.prefab  middle3.stl  palm.prefab  pinky0.prefab  pinky0_0.asset  pinky1.prefab  pinky1.stl  pinky2.prefab  pinky3.prefab  pinky3_0.asset  ring0.prefab  ring0_0.asset  (+19 more)
proact_unity/Assets/Urdf/mpl_right_arm/: robot_description.urdf
proact_unity/Assets/XR/: XRGeneralSettings.asset
proact_unity/Assets/XR/Settings/: OpenXR Package Settings.asset  Windows MR Package Settings.asset
proact_unity/Project10_Data/: ScriptingAssemblies.json  app.info  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.resource
proact_unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
proact_unity/UserSettings/: EditorUserSettings.asset
(+62 files in other folders)
