<?xml version="1.0"?>
<package format="2">
  <name>direct_control</name>
  <version>0.0.0</version>
  <description>The direct_control package</description>
  <maintainer email="shivanig@stanford.edu">shivani</maintainer>
  <license>MIT</license>

  <author email="shivanig@stanford.edu">shivani</author>
  <url type="website">https://armlabstanford.github.io/proact</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_rviz_plugin</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_svd</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>mpl_control</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>moveit_rviz_plugin</build_export_depend>
  <build_export_depend>mpl_control</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>moveit_rviz_plugin</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>eigen_svd</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>mpl_control</exec_depend>

</package>
